--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nima-m-git.github.io/battleship/",
   "name": "battleship",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,6 +38,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/preset-env": "^7.10.2",
+    "gh-pages": "^3.1.0",
     "jest": "^26.0.1",
     "react-test-renderer": "^16.13.1"
   }
